src/app/community/groups-feature/groups-feature.page.scss
ion-toolbar.purple-background {
    --background: linear-gradient(261.25deg, #7D5FFF -6.29%, #AA52FF 106.29%);
    --padding-start: 1rem;
    --padding-end: 1rem;
    --padding-bottom: 0.5rem;

    .header {
        display: flex;
        align-items: center;

        .add-event {
            margin-left: auto;
        }

        h2 {
            margin-left: auto;
            margin-right: -12vw;
        }
    }
}

ion-header {
    background: linear-gradient(261.25deg, #7D5FFF -6.29%, #AA52FF 106.29%);
}

ion-toolbar.searchbar {
    --background: #FBFBFB;

    ion-searchbar {
        margin-top: 0.5rem;
    }
}

.spacer {
    margin-bottom: 1rem;
}

.section-title {
    color: var(--color-primary-contrast);
}

hr {
    display: block;
    margin-top: 1em;
    margin-bottom: 0.5em;
    margin-left: auto;
    margin-right: auto;
    border-top: 1px solid #eee;
  }

.my-groups-container {
    width: 100%;
    
    .my-groups-header-container {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        margin-bottom: 1rem;
        margin-left: 0.5rem;
        margin-right: 0.5rem;
    }

    .my-groups-selector-container {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        margin-left: 0.5rem;
        margin-right: 0.5rem;

        .group-links-container {
            display: flex;
            flex-direction: row;

            .group-link {
                align-items: center;
                margin: 0 1.8rem 0 0;

                .group-image {
                    height: 3rem;
                    width: 3rem;
                    margin-bottom: 0.5rem;
                }
                .group-nav-group-name {
                    font-size: 0.8em;
                    text-align: center;
                    width: 3rem;
                    overflow: hidden;
                    text-overflow: ellipsis;
                    white-space: nowrap;
                    display: block;
                }
            }
        }
        .new-group-button-container {
            .new-group-button {
                max-width: 3rem;
                min-width: 3rem;
                min-height: 3rem;
                max-height: 3rem;
                border-radius: 50%;
                background-color: var(--color-primary);
                color: var(--color-primary-contrast);
                display: flex;
                justify-content: center;
                align-items: center;
                margin-bottom: 0.5rem;
            }
            .group-nav-group-name {
                font-size: 0.8em;
                text-align: center;
                width: 3rem;
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
                display: block;
            }
        }
    }
}

.my-groups-segment-container {
    margin: 0 1rem 1rem 1rem;
}

.section-header {
    margin-top: 2rem;
    margin-bottom: 1rem;
    margin-left: 0.5rem;
    
}

.see-all-link {
    font-size: 0.8rem;
    margin-top: 0.5rem;
}

.post {
    margin-bottom: 1rem;
    margin-left: 0.5rem;
    margin-right: 0.5rem;
}

.card-content {
    margin: 1rem;
    color: var(--color-tertiary);
}

.comment-icon {
    display: flex;
    justify-content: flex-end;
}

.post-group-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 0.5rem;

    .group-info {
        display: flex;
        flex-direction: row;
    }
    .group-image {
        height: 3rem;
        width: 3rem;
        margin-right: 0.8rem;
    }
    .group-name {
        font-size: 1.3em;
        font-weight: bold;
        align-self: center;
    }
    .post-date {
        font-size: 0.8em;
    }
}

.post-content {
    margin-left: 3rem;

    .poster-info {
        display: flex;
        flex-direction: row;
        margin-bottom: 0.5rem;
    
        .poster-image {
            height: 1.5rem;
            width: 1.5rem;
            margin-right: 0.5rem;
        }
        .poster-name {
            font-weight: bold;
            align-self: center;
        }
    }
    
    .post-images {
        margin-top: 0.5rem;
        display: flex;
        flex-wrap: wrap;
        padding: 0.25rem;
        gap: 10px;
    }
}

.groups-container {
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
    padding: 0.25rem;
}

